# ipsl

./: .gitignore  README.md  pyproject.toml
configs/datasets/: coco_detection.py  coco_instance.py  coco_instance_semantic.py  coco_panoptic.py  coco_semantic.py  voc0712.py
configs/models/mask2former/: mask2former_r50_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-b-p4-w12-384-in21k_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-b-p4-w12-384_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-s-p4-w7-224_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-s-p4-w7-224_8xb2-lsj-50e_coco.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_coco.py
configs/models/mask2former_ct/: README.md  mask2former_r50_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-b-p4-w12-384_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-t-p4-w7-224_8xb2-lsj-50e_coco.py
configs/models/mask2former_ipsl/: mask2former_r101_8xb2-lsj-50e_coco-panoptic.py  mask2former_r101_8xb2-lsj-50e_coco.py  mask2former_r50_8xb2-lsj-50e_coco-panoptic.py  mask2former_r50_8xb2-lsj-50e_coco.py  mask2former_swin-b-p4-w12-384-in21k_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-l-p4-w12-384-in21k_16xb1-lsj-100e_coco-panoptic.py  mask2former_swin-s-p4-w7-224_8xb2-lsj-50e_coco-panoptic.py  mask2former_swin-s-p4-w7-224_8xb2-lsj-50e_coco.py  (+2 more)
ipsl/: aaa.py
ipsl/hooks/: ipsl_frozen_hooks.py
ipsl/modeling/: ipsl.py  ipsl_mask2former.py  ipsl_mask2former_head.py  tmp.py
scripts/: test.sh  train.sh
